--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <meta charset="utf-8">
     <title>Titre de ma page</title>
@@ -8,5 +8,14 @@
   </head>
   <body>
     <h1>Titre de ma page</h1>
+    <div class="blue">
+
+    </div>
+    <div class="white">
+
+    </div>
+    <div class="red">
+
+    </div>
   </body>
 </html>
